@startuml Category_Budget_Module

package "Category & Budget Module" {

    class CategoryEntity {
        - int id
        - int userID
        - CategoryType type
        - String name
    }

    enum CategoryType {
        BUILTIN
        CUSTOM
    }

    class CategoryController {
        - CategoryService categoryService

        + addCustomCategory(int userID, CreateCategoryRequest request)
        + editCustomCategory(int userID, String categoryName)
        + deleteCustomCategory(int userID, int categoryID)
    }

    class CategoryService {
        - CategoryRepository categoryRepository

        + addCustomCategory(int userID, CreateCategoryRequest request)
        + editCustomCategory(int userID, String categoryName)
        + deleteCustomCategory(int userID, int categoryID)
    }

    class CategoryRepository {
        + save(CategoryEntity c)
        + findById(int id)
        + findByUserId(int userID)
        + deleteById(int id)
    }

    class CreateCategoryRequest {
        - int userID
        - CategoryType type
        - String name
    }

    class CreateBudgetRequest {
        - int userID
        - int categoryID
        - LocalDateTime startDate
        - LocalDateTime endDate
        - BudgetStatus status
    }

    class BudgetEntity {
        - int id
        - int userID
        - int categoryID
        - double spentAmount
        - LocalDateTime startDate
        - LocalDateTime endDate
        - BudgetStatus status
    }

    class BudgetController {
        - BudgetService budgetService

        + addBudget(int userID, CreateBudgetRequest request)
        + editBudget(int userID, int categoryID)
        + deleteBudget(int userID, int budgetID)
    }

    class BudgetService {
        - BudgetRepository budgetRepo

        + addBudget(int userID, CreateBudgetRequest request)
        + editBudget(int userID, int categoryID)
        + deleteBudget(int userID, int budgetID)
        + applyExpenseToBudget(int userID, int categoryID, double amount)
    }

    enum BudgetStatus {
        ON_TRACK
        NEAR_LIMIT
        EXCEEDED
    }

    class BudgetRepository {
        + save(BudgetEntity b)
        + findById(int id)
        + findByUserId(int userID)
        + findByCategoryId(int categoryID)
        + deleteById(int id)
    }

    ' Relationships
    CategoryController --> CategoryService
    CategoryController --> CreateCategoryRequest

    CategoryService --> CategoryRepository
    CategoryService --> CategoryEntity

    BudgetController --> BudgetService
    BudgetController --> CreateBudgetRequest

    BudgetService --> BudgetRepository
    BudgetService --> BudgetEntity

    BudgetEntity --> BudgetStatus

    CategoryEntity --> CategoryType
    CategoryEntity "1" o-- "0..1" BudgetEntity
}

' =========================
' CROSS-MODULE RELATIONS
' =========================

@enduml
